# schedul

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  clients.py  config.yaml.example  fff.py  flicks.py  get_data.py  justfile  main.py  models.py  mypy.ini  nziff.py  process.py  pyproject.toml  schedul.py
.github/: dependabot.yml
clients/: letterboxd.py  soup.py
festivals/: __init__.py  fff.py  flicks.py  nziff.py
models/: enums.py  festival.py  film.py  options.py  preference.py  schedule.py  session.py  venue.py
src/fe/: films.yaml  lowdefy.yaml
src/frontend/: bun.lockb  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
src/frontend/app/: page.tsx
src/frontend/pages/: _app.tsx  festivals.tsx  films.tsx  index.tsx  schedule.tsx
src/schedul/: Pipfile  cli.py  main.py  pyproject.toml  railway.toml  scrape.py  server.py  tui.py
src/schedul/clients/: soup.py  sql.py
src/schedul/festivals/: __init__.py
src/schedul/models/: base.py  bookings.py  enums.py  festival.py  festival_sql.py  film.py  film_screening.py  preference.py  schedule.py  screening.py  session.py  session_sql.py  user.py  venue.py  watchlist.py  watchlist_entry.py
src/schedul/routers/: bookings.py  festivals.py  films.py  screenings.py  users.py  venues.py  watchlist.py
src/schedul/scraper/clients/: letterboxd.py  soup.py
src/schedul/scraper/festivals/: __init__.py  base.py
src/schedul/scraper/festivals/custom/: example.py
src/schedul/services/: bookings.py  festival.py  film.py  schedule.py  screening.py  users.py  venue.py  watchlist.py
src/schedul/utils/: args.py  config.py
utils/: args.py  config.py  format.py
