[project]
name = "schedul"
version = "0.1.0"
description = ""
authors = [{name = "Chris Mitchell",email = "chris.t.mitchell@gmail.com"}]
readme = "README.md"
dependencies = [
    "arrow~=1.3.0",
    "fastapi~=0.111.1",
    "pydantic~=2.8.2",
    "sqlmodel~=0.0.21",
    "requests-html~=0.10.0",
    "uvicorn~=0.30.3",
    "httpx~=0.27.0",
    "psycopg2-binary~=2.9.9",
    "ics~=0.7.2",
    "textual~=0.74.0",
    "bs4~=0.0.2",
    "requests-cache~=1.2.1",
    "selenium~=4.23.1",
    "webdriver-manager~=4.0.2",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "types-requests~=2.32.0.20240712",
    "types-beautifulsoup4~=4.12.0.20240511",
    "types-tqdm~=4.66.0.20240417",
    "pre-commit~=3.7.1",
    "deptry~=0.17.0",
    "textual-dev~=1.5.1",
]

[tool.rye.scripts]
serve = "uvicorn src.schedul.main:app --reload --port 8001"
scrape = { call = "src.schedul.scrape:main" }
tui = "textual run --dev src/schedul/tui.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/schedul"]
