[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schedul"
version = "0.1.0"
description = ""
authors = [{name = "Chris Mitchell",email = "chris.t.mitchell@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [
    "arrow~=1.3.0",
    "fastapi~=0.111.1",
    "pydantic~=2.8.2",
    "sqlmodel~=0.0.21",
    "uvicorn~=0.30.3",
    "httpx~=0.27.0",
    "psycopg2-binary~=2.9.9",
    "ics~=0.7.2",
    "textual~=0.74.0",
    "bs4~=0.0.2",
    "requests-cache~=1.2.1",
    "selenium~=4.23.1",
    "webdriver-manager~=4.0.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit~=3.7.1",
    "deptry~=0.17.0",
    "textual-dev~=1.5.1",
]

[tool.deptry]
known_first_party = ["schedul"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "psycopg2-binary"]
