[tool.poetry]
name = "schedul"
version = "0.1.0"
description = ""
authors = ["Chris Mitchell <chris.t.mitchell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "*"
requests-cache = "*"
selenium = "*"
webdriver-manager = "*"
arrow = "*"
fastapi = "*"
pydantic = "*"
sqlmodel = "*"
requests-html = "*"
uvicorn = "*"
httpx = "*"
psycopg2-binary = "*"
ics = "*"
textual = "^0.71.0"
textual-dev = "^1.5.1"

[tool.poetry.group.dev.dependencies]
types-requests = "*"
types-beautifulsoup4 = "*"
types-tqdm = "*"
black = "*"
pre-commit = "*"
deptry = "*"
poethepoet = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true

[tool.poe.tasks]
serve = "uvicorn main:app --reload --port 8001"
scrape = "python scrape.py"
tui = "textual run --dev tui.py"
